deployment_config/clip_service.yaml
apiVersion: v1
kind: Service
metadata:
    name: clip-service
spec:
    selector:
        app: clip
    type: LoadBalancer
    ports:
        - protocol: TCP
          port: 7860
          targetPort: 80
